updated ComputeEngineIntegrationTest