@@ -1,10 +1,8 @@
 package integration;
 
 import computeengineapi.ComputeEngineAPI;
+import storagecomputeapi.StorageComputeAPI;
 import computeengineapi.ComputeEngineImpl;
-import usercomputeapi.DataSource;
-import usercomputeapi.ComputeRequest;
-import usercomputeapi.ComputeResponse;
 import usercomputeapi.UserComputeAPI;
 import usercomputeapi.UserComputeImpl;
 
@@ -16,28 +14,25 @@ import java.util.List;
 
 public class ComputeEngineIntegrationTest {
 
-    @Test
-    public void testIntegration() {
-//      create test input and output
-        TestInput input = new TestInput(Arrays.asList(1, 10, 25));
-        TestOutput output = new TestOutput();
-        TestDataStore dataStore = new TestDataStore(input, output);
+	@Test
+	public void testIntegration() {
+	    // Setup test input and output
+	    TestInput input = new TestInput(Arrays.asList(1, 10, 25));
+	    TestOutput output = new TestOutput();
+	    StorageComputeAPI dataStore = new TestDataStore(input, output); // now implements StorageComputeAPI
 
-//      implementation
-        ComputeEngineAPI computeEngine = new ComputeEngineImpl();
+	    // Real implementations
+	    ComputeEngineAPI computeEngine = new ComputeEngineImpl();
+	    UserComputeAPI userCompute = new UserComputeImpl();
 
-        UserComputeAPI userCompute = new UserComputeImpl();
+	    // Simulate compute flow
+	    for (Integer i : dataStore.readInput()) {
+	        int result = computeEngine.computeSum(List.of(i));
+	        dataStore.writeOutput(List.of(result)); // now uses StorageComputeAPI method
+	    }
 
-        // DataSource for ComputeRequest
-        DataSource source = () -> 100;
-        ComputeRequest request = new ComputeRequest(source, null);
-
-        for (Integer i : dataStore.readInput()) {
-            int result = computeEngine.computeSum(List.of(i));
-            dataStore.writeOut(List.of(String.valueOf(result)));
-        }
-
-        List<String> expected = Arrays.asList("0", "0", "0");
-        assertEquals(expected, output.getOutput());
-    }
+	    List<String> expected = Arrays.asList("0", "0", "0");
+	    List<String> actual = output.getOutput();
+	    assertEquals(expected, actual);
+	}
 }
